<resources>
    <string name="app_name">Jideo</string>
    <string name="app_slogan">Video to images converter</string>

    <!--    all activity-->
    <string name="activity_home">Home</string>
    <string name="activity_setting">Settings</string>
    <string name="activity_about">About</string>
    <string name="activity_term">Term &amp; privacy</string>
    <string name="activity_video">Video</string>
    <string name="activity_gallery">Gallery</string>
    <string name="activity_folder">Folder</string>
    <string name="activity_music">Select Music</string>

    <!-- Home -->
    <string name="home_name">VideoToPhoto</string>
    <string name="select_video">Select Video</string>
    <string name="gallery">Gallery</string>
    <string name="slide">Slideshow Marker</string>

    <!--    drawer-->
    <string name="home_drawer">Home</string>
    <string name="setting_drawer">Setting</string>
    <string name="rate_drawer">Rate us</string>
    <string name="share_drawer">Share</string>
    <string name="about_drawer">About</string>

    <!--    exit app-->
    <string name="exit">Are you handsome ?</string>
    <string name="sure">Yes</string>
    <string name="nah">No</string>

    <!--    about dialog-->
    <string name="author_name"><u>Jhuanq</u></string>
    <string name="author">Author</string>
    <string name="Term"><u>Term &amp; privacy</u>.</string>
    <string name="Email">dmquang321@gmail.com</string>
    <string name="version">Version</string>
    <string name="v">v 1.0</string>

    <!--    info img dialog-->
    <string name="info">Information</string>

    <!--    setting activity-->
    <string name="format">File Format</string>
    <string name="quality">Quality</string>
    <string name="size">Size</string>
    <string name="jpeg">JPEG</string>
    <string name="png">PNG</string>
    <string name="ultra">Ultra</string>
    <string name="very_high">Very high</string>
    <string name="high">High</string>
    <string name="medium">Medium</string>
    <string name="low">Low</string>
    <string name="very_low">Very low</string>

    <!--    player activity-->
    <string name="save">Save</string>

    <!--    Edit image activity-->
    <string name="brush">Brush</string>
    <string name="text">Text Editor</string>
    <string name="eraser">Eraser</string>
    <string name="filter">Filters</string>
    <string name="emoji">Emojis</string>
    <string name="sticker">Stickers</string>
    <string name="load">Loading…</string>
    <string name="cancel">Cancel</string>
    <string name="text2">Text</string>
    <string name="crop">Crop</string>
    <string name="cancel_edit">Are you sure you want to discard all changes ?</string>
    <string name="cancel_edit_yes">Discard changes</string>

    <!--    add text dialog-->
    <string name="done">Done</string>

    <!--    custom video dialog options-->
    <string name="option">Options</string>
    <string name="play">Play</string>
    <string name="rename">Rename</string>
    <string name="delete">Delete</string>
    <string name="share">Share</string>
    <string name="detail">Detail</string>

    <!--    rename dialog-->
    <string name="ok">Ok</string>
    <string name="hint">Enter name</string>

    <!--    detail image activity-->
    <string name="delete_image">Are you sure you want to delete ?</string>

    <!--    slide show activity-->
    <string name="create">Create</string>
    <string name="selected">Image selected:</string>

    <!--    duration dialog-->
    <string name="enter_duration">Enter duration</string>
    <string name="sec">Sec/image</string>

</resources>

