<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <View
        android:id="@+id/v_bg"
        android:layout_width="match_parent"
        android:layout_height="@dimen/view_height"
        android:background="@drawable/toolbar_cloud_bg" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/joti_one"
        android:text="@string/quality"
        android:textColor="@color/blue"
        android:textSize="25sp" />

    <RadioGroup
        android:id="@+id/rb_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/v_bg"
        android:layout_centerHorizontal="true"
        android:layout_margin="15dp">

        <RadioButton
            android:id="@+id/rb_ultra"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/ultra"
            android:textSize="22sp" />

        <RadioButton
            android:id="@+id/rb_very_high"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/very_high"
            android:textSize="22sp" />

        <RadioButton
            android:id="@+id/rb_high"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/high"
            android:textSize="22sp" />

        <RadioButton
            android:id="@+id/rb_medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/medium"
            android:textSize="22sp" />

        <RadioButton
            android:id="@+id/rb_low"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/low"
            android:textSize="22sp" />

        <RadioButton
            android:id="@+id/rb_very_low"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/very_low"
            android:textSize="22sp" />

    </RadioGroup>

</RelativeLayout>