<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/blue_activity_bg">

    <androidx.cardview.widget.CardView
        android:id="@+id/cv"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        app:cardCornerRadius="75dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@mipmap/logo" />

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/author"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/cv"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/author"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/author"
        android:layout_centerHorizontal="true"
        android:text="@string/author_name"
        android:textColor="@color/blue"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/name"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/version"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/v"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/version"
        android:layout_centerHorizontal="true"
        android:text="@string/v"
        android:textColor="@color/blue"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/term"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/v"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/Term"
        android:textColor="@color/blue"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/term"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/Email"
        android:textColor="@color/blue"
        android:textSize="18sp" />

    <Button
        android:id="@+id/btn_ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/email"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/white"
        android:text="Ok"
        android:textAllCaps="false"
        android:textColor="@color/blue"
        android:textSize="18sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:layout_below="@+id/btn_ok" />

</RelativeLayout>